grammar.js
    source_file: $ => repeat($._statement),

    _statement: $ => choice(
      $.package_statement,

      $.use_no_statement,
      $.use_no_if_statement,
      $.bareword_import,
      $.use_no_subs_statement,
      $.use_no_feature_statement,
      $.use_no_version,
      $.require_statement,

      $.use_constant_statement,

      $.use_parent_statement,

      $._expression_statement,

      $._declaration,

      $.single_line_statement,

      $._compound_statement,

      $.standalone_block,
      $.named_block_statement,

      $.ellipsis_statement,
      $.special_block,

      $.special_literal,

      $.pod_statement,
    ),

    variable_declaration: $ => seq(
      $.scope,
      // multi declaration
      // or single declaration without brackets
      choice($.multi_var_declaration, $.single_var_declaration, $.type_glob_declaration),
      optional($._initializer),
      ';',
    ),

    single_var_declaration: $ => alias($.variable_declarator, 'single_var_declaration'),

    _initializer: $ => seq(
      '=',
      field('value', $._expression),
    ),

    scope: $ => choice(
      'our',
      'state',
      'my',
      'local',
    ),

    // why perl, why!
    _expression: $ => with_or_without_brackets(choice(
      $._expression_without_call_expression_with_just_name,
      alias($.call_expression_with_just_name, $.call_expression),
    )),

    // NOTE: just a hack to handle identifier vs subroutine call
    method_invocation: $ => prec.left(PRECEDENCE.SUB_CALL + 1, seq(
      choice(
        field('package_name', choice($.identifier, $.package_name, $.string_single_quoted, '__PACKAGE__')),
        field('object', $.scalar_variable),
        field('object_return_value', $._expression),
      ),
      prec.right(repeat1(
        seq(
          $.arrow_operator,
          choice(
            seq(
              optional(seq($.super, token.immediate('::'))),
              field('function_name', $.identifier)
            ),
            $.scalar_variable,
            $.scalar_reference,
          ),
          optional(field('args',
            choice(
              $.empty_parenthesized_argument,
              $.parenthesized_argument,
              $.argument_list
            )
          )), // TODO: make this optional and fix errors
        ),
      ),
    ))),

    empty_parenthesized_argument: $ => prec(PRECEDENCE.SUB_ARGS, seq('(', ')')),

    parenthesized_argument: $ => prec(PRECEDENCE.SUB_ARGS, seq(
      '(',
      $.argument_list,
      ')',
    )),

    identifier: $ => /[a-zA-Z0-9_]+/,
    // bareword: $ => /[a-zA-Z0-9_$]+/,

    // any characters or just bareword(s) and variables
    package_name: $ => choice(
      $.identifier,
      seq(
        $.identifier,
        repeat1(seq(
          token.immediate('::'),
          $.identifier,
        )),
      ),
      // /[A-Z_a-z][0-9A-Z_a-z]*(?:::[0-9A-Z_a-z]+)*/,
      // /\$[0-9A-Z_a-z]*(?:::[0-9A-Z_a-z]+)*/, // TODO fix this
      // /\*[0-9A-Z_a-z]*(?:::[0-9A-Z_a-z]+)*/, // type glob stuff
      // TODO: put in other package name structures
    ),

    string_single_quoted: $ => prec(PRECEDENCE.STRING, seq(
      "'",
      repeat(choice(/[^']/, /\\'/)),
      "'",
    )),
    // TODO change all + to * in regex
    // NOTE/TODO:
    // we are currently only supporting {, /, (, \ as delimiters
    // in future release should use external scanners for delimiters
    scalar_variable: $ => choice(
      /\$[\d]+/,                      // $0, $1 - they are read-only
      /\$[!]/,
      /\$\#_?[a-zA-Z0-9_]+/,          // length of an array
      /\$[A-Z^_?\\]/,                 // checkout https://perldoc.perl.org/perldata#Identifier-parsing
      /\$_?[a-zA-Z0-9_]+/,
    ),

    hash_ref: $ => seq(
      optional('+'), // to make into a hash_ref rather than a block
      '{',
      optional(commaSeparated(choice(
        $.ternary_expression_in_hash,
        $._key_value_pair,
        $.hash_dereference,
      ))),
      '}'
    ),

    _key_value_pair: $ => prec.left(seq(
      field('key', choice(
        alias($.identifier, $.bareword),
        alias($.key_words_in_hash_key, $.bareword),
        $._expression_without_call_expression_with_just_name,
      )),
      $.fat_comma,
      choice(
        // field('value', $.hash_access_variable),
        field('value', $._expression),
      ),
    )),

    // NOTE: this is a hack for keys that are keywords
    arrow_operator: $ => /->/,
